[gd_scene load_steps=6 format=3 uid="uid://daxygoynvdyya"]

[ext_resource type="Script" uid="uid://cd6xl8s6uwuru" path="res://scenes/ui/options/game_menu.gd" id="2_pgx83"]
[ext_resource type="PackedScene" uid="uid://bmseo0o33mlhx" path="res://scenes/utils/bg/non_paralax_bg.tscn" id="2_xchcp"]
[ext_resource type="PackedScene" uid="uid://dbbsogecs7agw" path="res://scenes/ui/changePlayerNumber/changePlayerNumber.tscn" id="3_vf1v4"]
[ext_resource type="Texture2D" uid="uid://chjk0y2issu02" path="res://assets/Arrows/green_down.png" id="4_aoxtj"]
[ext_resource type="Texture2D" uid="uid://cmw20fckmgpvs" path="res://assets/Arrows/green_up.png" id="5_o1otn"]

[node name="GameMenu" type="Control"]
clip_children = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("2_pgx83")

[node name="NonParalaxBG" parent="." instance=ExtResource("2_xchcp")]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 0.780392)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -362.0
offset_top = -111.0
offset_right = 362.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="ChangePlayerNumber" parent="MarginContainer/ButtonsVBox" instance=ExtResource("3_vf1v4")]
layout_mode = 2

[node name="SettingsGridContainer" type="GridContainer" parent="MarginContainer/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="MusicLabel" type="Label" parent="MarginContainer/ButtonsVBox/SettingsGridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/ButtonsVBox/SettingsGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../SFXSlider")
focus_next = NodePath("../SFXSlider")
max_value = 1.0
step = 0.05

[node name="SFXLabel" type="Label" parent="MarginContainer/ButtonsVBox/SettingsGridContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/ButtonsVBox/SettingsGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../MusicSlider")
focus_previous = NodePath("../MusicSlider")
max_value = 1.0
step = 0.05
value = 1.0

[node name="ChangeCurrentIndexContainer" type="HBoxContainer" parent="MarginContainer/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="IndexDown" type="Button" parent="MarginContainer/ButtonsVBox/ChangeCurrentIndexContainer"]
layout_mode = 2
icon = ExtResource("4_aoxtj")

[node name="CurrantePlayerLabel" type="Label" parent="MarginContainer/ButtonsVBox/ChangeCurrentIndexContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Player: 1"

[node name="IndexUp" type="Button" parent="MarginContainer/ButtonsVBox/ChangeCurrentIndexContainer"]
layout_mode = 2
icon = ExtResource("5_o1otn")

[node name="PlayerControlContainer" type="GridContainer" parent="MarginContainer/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="MainMenuButton" type="Button" parent="MarginContainer/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
text = "Return to menu"

[node name="QuitButton" type="Button" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
focus_previous = NodePath("../MainMenuButton")
text = "Quit Game"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="value_changed" from="MarginContainer/ButtonsVBox/SettingsGridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/ButtonsVBox/SettingsGridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/ChangeCurrentIndexContainer/IndexDown" to="." method="_on_index_down_pressed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/ChangeCurrentIndexContainer/IndexUp" to="." method="_on_index_up_pressed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/QuitButton" to="." method="_on_quit_button_pressed"]
